[package]
name = "rmsc_rs"
version = "0.1.0"
edition = "2021"
authors = ["oiwn <blank@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Ring Mod Side Chain apptmpt in Rust"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
